trying github hosting

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
    </body>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.7/rxjs.umd.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.27.1/ramda.min.js"></script>
-   <script src="./index.js"></script>
+   <script src="./dist/index.js"></script>
 </html>
